ADD bootstrap AND css files AND Images folder

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,10 @@
+<div class="hero-scene text-center text-white">
+    <div class="hero-scene-content">
+        <h1>Viens écrire ta légende !</h1>
+        <p>Une multitude de jeux sur lesquels venir démarrer ou poursuivre ton ascension vers le sommet !</p>
+        <button class="btn btn-primary">se connecter</button>
+    </div>
+</div>
+
 <h1>Bienvenue sur les toutes premières briques de l'appli Esportify !</h1>
+<button class="btn btn-secondary">Un bouton</button>
