--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="scss/main.css"/>
+
     <title>Document</title>
+    
 </head>
 <body>
-    <header>Header</header>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white" href="#">Esportify</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <form class="d-flex" role="login">
+                        <button class="btn btn-secondary" type="submit">Connexion</button>
+                    </form>
+                    </div>
+            </div>
+        </nav>
+    </header>
 
     <main id="main-page">
 
@@ -14,6 +31,6 @@
     <footer>Footer</footer>
     
     <script type="module" src="Router/Router.js"></script>
-</body>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </html>
 
