Update on home page and ADD RegisterChoice page

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,10 +1,55 @@
 <div class="hero-scene text-center text-white">
     <div class="hero-scene-content">
-        <h1>Viens écrire ta légende !</h1>
-        <p>Une multitude de jeux sur lesquels venir démarrer ou poursuivre ton ascension vers le sommet !</p>
+        <h1 class="pb-5">Viens écrire ta légende !</h1>
+        <p class="pb-4">Une multitude de jeux sur lesquels venir démarrer ou poursuivre ton ascension vers le sommet !</p>
         <button class="btn btn-primary">se connecter</button>
     </div>
 </div>
 
-<h1>Bienvenue sur les toutes premières briques de l'appli Esportify !</h1>
-<button class="btn btn-secondary">Un bouton</button>
+<div class="row mb-2 mt-4 text-center pb-2">
+    <div class="col">
+        <h1 class="contentTitle">La plateforme 100% en ligne pour participer et organiser des tournois</h1>
+        <p class="contentText">
+            Avec Esportify tu vas pouvoir facilement participer et même organiser des tournois de tes jeux favoris.<br><br>
+                            Il nous tient à cœur de pouvoir faire vibrer le monde de l’E-sport et de le rendre accessible pour tous !<br><br>
+                            Que tu sois un.e débutant.e souhaitant connaître ses compétences en situation compétitive, expert.e revendiquant le titre de Maître ou encore un.e compétiteur.rice professionnel.le aguerri.e, tu trouveras forcément le tournoi qu’il te faut !<br><br>
+                            Tu es un.e organisateur.ice? Alors viens profiter de nos outils simples et rapides pour créer et gérer tes tournois à la perfection !<br>  </p>
+        <a href="registerChoice" class=" btn btn-secondary">S'inscrire</a>
+    </div>
+</div>
+<div class="bg-white pb-2 pt-1">
+    <h1 class="contentTitle mt-4 mb-2">Les jeux les plus populaires</h1>
+    <div class="slider">
+        <div class="slides pb-4">
+            <img src="/Images/LoL-jacket.jpg" alt="Image 1" 
+                data-caption=
+                "Tu as l’âme d’un stratège et les compétences martiales d’un guerrier aguerri ? Alors viens tenter ta chance dans l’un de nos nombreux tournois League of Legends !">
+            <img src="/Images/CounterStrike2-jacket.jpg" alt="Image 2"
+                data-caption=
+                "Plutôt de la vieille génération ? Viens te mesurer aux nombreux fans de la licence CS dans des affrontements sans répit !">
+            <img src="/Images/hearthstone-jacket.jpg" alt="Image 3"
+                data-caption=
+                "Tu n’as encore jamais eu l’occasion de tester tes compétences de deckbuilder en dehors du ladder ? Alors viens te mesurer à nos joueurs talentueux, passionnés de TCG !">
+            <img src="/Images/RocketLeague-jacket.jpg" alt="Image 4"
+                data-caption=
+                "Tu n’as jamais su si tu devais démarrer une carrière de footballer ou de pilote de course ? Et bien viens faire les deux en même temps dans les compétitions Rocket League !">
+            <img src="/Images/valorant.jpg" alt="Image 5"
+                data-caption=
+                "Précision, rapidité, analyse voilà bien des compétences que tu vas pouvoir mettre à l’épreuve dans nos nombreux tournoi Valorant !">
+        </div>
+
+        <button class="buttonSlider prev">
+            <i class="bi bi-arrow-left-circle fs-2"></i>
+        </button>
+        <button class="buttonSlider next">
+            <i class="bi bi-arrow-right-circle fs-2"></i>
+        </button>
+    </div>
+
+    <p class="slider-caption"></p>
+</div>
+<div>
+    <h1 class="contentTitle">Tournois en cours</h1>
+    
+</div>
+
