Update home and custom.scss to ADD tournament-card

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <div class="hero-scene text-center text-white">
     <div class="hero-scene-content">
-        <h1 class="pb-5">Viens écrire ta légende !</h1>
-        <p class="pb-4">Une multitude de jeux sur lesquels venir démarrer ou poursuivre ton ascension vers le sommet !</p>
+        <h1 class="heroTitle pb-5">Viens écrire ta légende !</h1>
+        <p class="heroText pb-4">Une multitude de jeux sur lesquels venir démarrer ou poursuivre ton ascension vers le sommet !</p>
         <button class="btn btn-primary">se connecter</button>
     </div>
 </div>
@@ -46,10 +46,33 @@
         </button>
     </div>
 
-    <p class="slider-caption"></p>
+    <p class="slider-caption contentText"></p>
+    <div class="text-center pb-4 pt-4">
+        <a href="" class="btn btn-secondary">Liste des jeux</a>
+    </div>
+    
 </div>
 <div>
-    <h1 class="contentTitle">Tournois en cours</h1>
-    
+    <h1 class="contentTitle pt-4">Tournois en cours</h1>
+    <div class="tournament-list">
+
+        <div class="tournament-card">
+            <img src="/Images/LoL-jacket.jpg" alt="Tournoi LoL" />
+            <div class="overlay">
+                <h3>LOLFR-CUP</h3>
+                <p>Qualification à la League of Legend French Cup !</p>
+                <span>96/96</span>
+            </div>
+        </div>
+
+        <div class="tournament-card">
+            <img src="/Images/valorant.jpg" alt="Tournoi Valorant" />
+            <div class="overlay">
+                <h3>WEEKLY ESPORTIFY CUP</h3>
+                <p>Bienvenue à la Weekly Esportify Cup</p>
+                <span>64/64</span>
+            </div>
+        </div>
+    </div>
 </div>
 
