ADD login.html and setup allRoutes to access to it

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,9 +2,11 @@
     <div class="hero-scene-content">
         <h1 class="heroTitle pb-5">Viens écrire ta légende !</h1>
         <p class="heroText pb-4">Une multitude de jeux sur lesquels venir démarrer ou poursuivre ton ascension vers le sommet !</p>
-        <button class="btn btn-primary">se connecter</button>
+        <a href="/login">
+            <button class="btn btn-secondary">Se connecter</button>
+        </a>
     </div>
-</div>
+</div>git
 
 <div class="row mb-2 mt-4 text-center pb-2">
     <div class="col">
