--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container-fluid">
                 <a class="navbar-brand text-white" href="/">Esportify</a>
-                    <form class="d-flex" role="login">
-                        <button class="btn btn-secondary" type="submit">Connexion</button>
-                    </form>
+                    <a href="/login">
+                        <button class="btn btn-secondary">Connexion</button>
+                    </a>
                     </div>
             </div>
         </nav>
