--- a/pages/home.html
+++ b/pages/home.html
@@ -6,7 +6,7 @@
             <button class="btn btn-secondary">Se connecter</button>
         </a>
     </div>
-</div>git
+</div>
 
 <div class="row mb-2 mt-4 text-center pb-2">
     <div class="col">
@@ -23,19 +23,19 @@
     <h1 class="contentTitle mt-4 mb-2">Les jeux les plus populaires</h1>
     <div class="slider">
         <div class="slides pb-4">
-            <img src="/Images/LoL-jacket.jpg" alt="Image 1" 
+            <img src="/Images/LoL-jacket.jpg" alt="LoL-banner" 
                 data-caption=
                 "Tu as l’âme d’un stratège et les compétences martiales d’un guerrier aguerri ? Alors viens tenter ta chance dans l’un de nos nombreux tournois League of Legends !">
-            <img src="/Images/CounterStrike2-jacket.jpg" alt="Image 2"
+            <img src="/Images/CounterStrike2-jacket.jpg" alt="CounterStrike-banner"
                 data-caption=
                 "Plutôt de la vieille génération ? Viens te mesurer aux nombreux fans de la licence CS dans des affrontements sans répit !">
-            <img src="/Images/hearthstone-jacket.jpg" alt="Image 3"
+            <img src="/Images/hearthstone-jacket.jpg" alt="Hearthstone-banner"
                 data-caption=
                 "Tu n’as encore jamais eu l’occasion de tester tes compétences de deckbuilder en dehors du ladder ? Alors viens te mesurer à nos joueurs talentueux, passionnés de TCG !">
-            <img src="/Images/RocketLeague-jacket.jpg" alt="Image 4"
+            <img src="/Images/RocketLeague-jacket.jpg" alt="RocketLeague-banner"
                 data-caption=
                 "Tu n’as jamais su si tu devais démarrer une carrière de footballer ou de pilote de course ? Et bien viens faire les deux en même temps dans les compétitions Rocket League !">
-            <img src="/Images/valorant.jpg" alt="Image 5"
+            <img src="/Images/valorant.jpg" alt="Valorant-banner"
                 data-caption=
                 "Précision, rapidité, analyse voilà bien des compétences que tu vas pouvoir mettre à l’épreuve dans nos nombreux tournoi Valorant !">
         </div>
