changes Router to make #/ routes and add login.html

--- a/pages/404.html
+++ b/pages/404.html
@@ -1,5 +1,5 @@
 <div>
     <h1>Il semblerait que vous vous soyez perdu !</h1>
     <p>Visiblement cette page n'existe pas, si vous souhaitez retourner à l'accueil, cliquez juste en dessous !</p>
-    <p><a href="/">Retour à l'acceuil</a>
+    <p><a href="#/">Retour à l'acceuil</a>
 </div>
