--- a/pages/login.html
+++ b/pages/login.html
@@ -1,1 +1,24 @@
-<h1>Félicitation ta page et ta route fonctionne pour login !</h1>
+<div class="login-container mt-5">
+    <h1 class="text-center mb-4">Connexion</h1>
+    <form>
+        <div class="mb-3">
+            <label for="email" class="form-label">Adresse e-mail</label>
+            <input type="email" class="form-control" id="email" placeholder="Entrez votre e-mail">
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Mot de passe</label>
+            <input type="password" class="form-control" id="password" placeholder="Entrez votre mot de passe">
+            <i>Identifiant ou mot de passe oublié ? Cliquez ici !</i>
+        </div>
+        <div class="d-grid gap-2 pt-4">
+            <button type="submit" class="btn btn-secondary">Se connecter</button>
+        </div>
+    </form>
+</div>
+<div class="text-center mt-5">
+    <h1>Pas encore membre de notre merveilleuse communauté ?</h1>
+    <p class="pt-4">Alors inscris toi gratuitement pour accéder à toutes nos fonctionnalités et rejoindre le monde passionnant de l’E-sport !</p>
+    <p class="pt-2">Que tu sois là pour en découdre sur le terrain en tant que joueur.euse ou mettre le show en tant qu’organisateur.ice le prochain bouton a été conçu avec amour rien que pour toi alors n’hésite plus et clique dessus !</p>
+    <a href="#/registerChoice">
+        <button class="btn btn-secondary mt-4 mb-5">S'inscrire</button>
+</div>
