--- a/pages/registerChoice.html
+++ b/pages/registerChoice.html
@@ -1,4 +1,4 @@
 <h1>GG le routage et le bouton fonctionnent, c'est fantastique !</h1>
 <p>Bonjour</p>
 
-<a href="/" class="btn btn-secondary">Accueil</a>
+<a href="#/" class="btn btn-secondary">Accueil</a>
