--- a/pages/home.html
+++ b/pages/home.html
@@ -1,80 +1,70 @@
 <div class="hero-scene text-center text-white">
-    <div class="hero-scene-content">
-        <h1 class="heroTitle pb-5">Viens écrire ta légende !</h1>
-        <p class="heroText pb-4">Une multitude de jeux sur lesquels venir démarrer ou poursuivre ton ascension vers le sommet !</p>
-        <a href="/login">
-            <button class="btn btn-secondary">Se connecter</button>
-        </a>
-    </div>
+  <div class="hero-scene-content">
+    <h1 class="heroTitle pb-5">Viens écrire ta légende !</h1>
+    <p class="heroText pb-4">
+      Une multitude de jeux sur lesquels venir démarrer ou poursuivre ton ascension vers le sommet !
+    </p>
+    <a href="#/login">
+      <button class="btn btn-secondary">Se connecter</button>
+    </a>
+  </div>
 </div>
 
 <div class="row mb-2 mt-4 text-center pb-2">
-    <div class="col">
-        <h1 class="contentTitle">La plateforme 100% en ligne pour participer et organiser des tournois</h1>
-        <p class="contentText">
-            Avec Esportify tu vas pouvoir facilement participer et même organiser des tournois de tes jeux favoris.<br><br>
-                            Il nous tient à cœur de pouvoir faire vibrer le monde de l’E-sport et de le rendre accessible pour tous !<br><br>
-                            Que tu sois un.e débutant.e souhaitant connaître ses compétences en situation compétitive, expert.e revendiquant le titre de Maître ou encore un.e compétiteur.rice professionnel.le aguerri.e, tu trouveras forcément le tournoi qu’il te faut !<br><br>
-                            Tu es un.e organisateur.ice? Alors viens profiter de nos outils simples et rapides pour créer et gérer tes tournois à la perfection !<br>  </p>
-        <a href="registerChoice" class=" btn btn-secondary">S'inscrire</a>
-    </div>
+  <div class="col">
+    <h1 class="contentTitle">La plateforme 100% en ligne pour participer et organiser des tournois</h1>
+    <p class="contentText">
+      Avec Esportify tu vas pouvoir facilement participer et même organiser des tournois de tes jeux favoris.<br><br>
+      Il nous tient à cœur de pouvoir faire vibrer le monde de l’E-sport et de le rendre accessible pour tous !<br><br>
+      Que tu sois un.e débutant.e, expert.e ou professionnel.le, tu trouveras forcément le tournoi qu’il te faut !<br><br>
+      Tu es un.e organisateur.ice? Alors viens profiter de nos outils simples et rapides pour créer et gérer tes tournois à la perfection !<br>
+    </p>
+    <a href="#/registerChoice" class="btn btn-secondary">S'inscrire</a>
+  </div>
 </div>
+
 <div class="bg-white pb-2 pt-1">
-    <h1 class="contentTitle mt-4 mb-2">Les jeux les plus populaires</h1>
-    <div class="slider">
-        <div class="slides pb-4">
-            <img src="/Images/LoL-jacket.jpg" alt="LoL-banner" 
-                data-caption=
-                "Tu as l’âme d’un stratège et les compétences martiales d’un guerrier aguerri ? Alors viens tenter ta chance dans l’un de nos nombreux tournois League of Legends !">
-            <img src="/Images/CounterStrike2-jacket.jpg" alt="CounterStrike-banner"
-                data-caption=
-                "Plutôt de la vieille génération ? Viens te mesurer aux nombreux fans de la licence CS dans des affrontements sans répit !">
-            <img src="/Images/hearthstone-jacket.jpg" alt="Hearthstone-banner"
-                data-caption=
-                "Tu n’as encore jamais eu l’occasion de tester tes compétences de deckbuilder en dehors du ladder ? Alors viens te mesurer à nos joueurs talentueux, passionnés de TCG !">
-            <img src="/Images/RocketLeague-jacket.jpg" alt="RocketLeague-banner"
-                data-caption=
-                "Tu n’as jamais su si tu devais démarrer une carrière de footballer ou de pilote de course ? Et bien viens faire les deux en même temps dans les compétitions Rocket League !">
-            <img src="/Images/valorant.jpg" alt="Valorant-banner"
-                data-caption=
-                "Précision, rapidité, analyse voilà bien des compétences que tu vas pouvoir mettre à l’épreuve dans nos nombreux tournoi Valorant !">
-        </div>
-
-        <button class="buttonSlider prev">
-            <i class="bi bi-arrow-left-circle fs-2"></i>
-        </button>
-        <button class="buttonSlider next">
-            <i class="bi bi-arrow-right-circle fs-2"></i>
-        </button>
+  <h1 class="contentTitle mt-4 mb-2">Les jeux les plus populaires</h1>
+  <div class="slider">
+    <div class="slides pb-4">
+      <img src="/Esportify-front/Images/LoL-jacket.jpg" alt="LoL-banner" data-caption="Tu as l’âme d’un stratège...">
+      <img src="/Esportify-front/Images/CounterStrike2-jacket.jpg" alt="CounterStrike-banner" data-caption="Plutôt de la vieille génération...">
+      <img src="/Esportify-front/Images/hearthstone-jacket.jpg" alt="Hearthstone-banner" data-caption="Tu n’as encore jamais eu l’occasion...">
+      <img src="/Esportify-front/Images/RocketLeague-jacket.jpg" alt="RocketLeague-banner" data-caption="Tu n’as jamais su si tu devais démarrer...">
+      <img src="/Esportify-front/Images/valorant.jpg" alt="Valorant-banner" data-caption="Précision, rapidité, analyse...">
     </div>
 
-    <p class="slider-caption contentText"></p>
-    <div class="text-center pb-4 pt-4">
-        <a href="" class="btn btn-secondary">Liste des jeux</a>
-    </div>
-    
+    <button class="buttonSlider prev"><i class="bi bi-arrow-left-circle"></i></button>
+    <button class="buttonSlider next"><i class="bi bi-arrow-right-circle"></i></button>
+  </div>
+
+  <p class="slider-caption contentText"></p>
+  <div class="text-center pb-4 pt-4">
+    <a href="#/" class="btn btn-secondary">Liste des jeux</a>
+  </div>
 </div>
+
 <div>
-    <h1 class="contentTitle pt-4">Tournois en cours</h1>
-    <div class="tournament-list">
-
-        <div class="tournament-card">
-            <img src="/Images/LoL-jacket.jpg" alt="Tournoi LoL" />
-            <div class="overlay">
-                <h3>LOLFR-CUP</h3>
-                <p>Qualification à la League of Legend French Cup !</p>
-                <span>96/96</span>
-            </div>
-        </div>
-
-        <div class="tournament-card">
-            <img src="/Images/valorant.jpg" alt="Tournoi Valorant" />
-            <div class="overlay">
-                <h3>WEEKLY ESPORTIFY CUP</h3>
-                <p>Bienvenue à la Weekly Esportify Cup</p>
-                <span>64/64</span>
-            </div>
-        </div>
+  <h1 class="contentTitle pt-4">Tournois en cours</h1>
+  <div class="tournament-list">
+    <div class="tournament-card">
+      <img src="/Esportify-front/Images/LoL-jacket.jpg" alt="Tournoi LoL" />
+      <div class="overlay">
+        <h3>LOLFR-CUP</h3>
+        <p>Qualification à la League of Legend French Cup !</p>
+        <span>96/96</span>
+      </div>
     </div>
+
+    <div class="tournament-card">
+      <img src="/Esportify-front/Images/valorant.jpg" alt="Tournoi Valorant" />
+      <div class="overlay">
+        <h3>WEEKLY ESPORTIFY CUP</h3>
+        <p>Bienvenue à la Weekly Esportify Cup</p>
+        <span>64/64</span>
+      </div>
+    </div>
+  </div>
 </div>
+
 
