ADD all login and register pages and UPDATE CSS

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,6 @@
 <div class="hero-scene text-center text-white">
   <div class="hero-scene-content">
-    <h1 class="heroTitle pb-5">Viens écrire ta légende !</h1>
+    <h1 class="heroTitle mb-5">Viens écrire ta légende !</h1>
     <p class="heroText pb-4">
       Une multitude de jeux sur lesquels venir démarrer ou poursuivre ton ascension vers le sommet !
     </p>
