--- a/pages/login.html
+++ b/pages/login.html
@@ -1,5 +1,5 @@
 <div class="login-container mt-5">
-    <h1 class="text-center mb-4">Connexion</h1>
+    <h1 class="contentTitle text-white">Connexion</h1>
     <form>
         <div class="mb-3">
             <label for="email" class="form-label">Adresse e-mail</label>
@@ -16,7 +16,7 @@
     </form>
 </div>
 <div class="text-center mt-5">
-    <h1>Pas encore membre de notre merveilleuse communauté ?</h1>
+    <h1 class="contentTitle">Pas encore membre de notre merveilleuse communauté ?</h1>
     <p class="pt-4">Alors inscris toi gratuitement pour accéder à toutes nos fonctionnalités et rejoindre le monde passionnant de l’E-sport !</p>
     <p class="pt-2">Que tu sois là pour en découdre sur le terrain en tant que joueur.euse ou mettre le show en tant qu’organisateur.ice le prochain bouton a été conçu avec amour rien que pour toi alors n’hésite plus et clique dessus !</p>
     <a href="#/registerChoice">
