--- a/pages/registerChoice.html
+++ b/pages/registerChoice.html
@@ -1,4 +1,31 @@
-<h1>GG le routage et le bouton fonctionnent, c'est fantastique !</h1>
-<p>Bonjour</p>
+<h1 class="contentTitle mt-4">Bienvenue sur la page d'inscription</h1>
+<p class="contentText mb-4">Quel type de profil souhaites-tu créer ?</p>
 
-<a href="#/" class="btn btn-secondary">Accueil</a>
+<div class="registerRoleWindow">
+    <h1 class="mt-2">Profil "joueur"</h1>
+    <p class="pt-2 pb-3">Avec ce profil tu pourras :</p>
+    <ul>
+        <li class="pt-2">Participer à des tournois</li>
+        <li class="pt-2">Rejoindre des équipes</li>
+        <li class="pt-2">Suivre ton classement et tes statistiques via un tableau de bord personnalisé</li>
+        <li class="pt-2">Rejoindre les lives des tournois en cours</li>
+        <li class="pt-2">Accéder à une messagerie pour communiquer avec le reste de la communauté</li>
+    </ul>
+    <a href="#/registerPlayer">
+        <button class="btn btn-secondary mt-2">Choisir</button>
+    </a>
+</div>
+<div class="registerRoleWindow mt-2 mb-4">
+    <h1 class="mb-2">Profil "organisateur"</h1>
+    <p class="pt-2 pb-3">Avec ce profil tu pourras :</p>
+    <ul>
+        <li class="pt-2">Organiser des tournois</li>
+        <li class="pt-2">Créer des lives pour tes tournois</li>
+        <li class="pt-2">Gérer de A à Z tes tournois et suivre leurs statistiques via un tableau de bord personnalisé</li>
+        <li class="pt-2">Rejoindre les lives des tournois en cours</li>
+        <li class="pt-2">Accéder à une messagerie pour communiquer avec le reste de la communauté</li>
+    </ul>
+    <a href="#/registerOrga">
+        <button class="btn btn-secondary mt-2">Choisir</button>
+    </a>
+</div>
